--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
    ],
    "source": [
     "greenville_population = greenville['population']\n",
-    "greenville_population # 84554"
+    "greenville_population"
    ]
   },
   {
