--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "greenville[3] = greenville_population\n",
+    "greenville_population = greenville\n",
     "greenville_population"
    ]
   },
