Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,8 +106,7 @@
     }
    ],
    "source": [
-    "greenville_population = greenville[3]\n",
-    "greenville_population"
+    "greenville[3]\n"
    ]
   },
   {
