--- a/index.ipynb
+++ b/index.ipynb
@@ -90,11 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Population']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "greenville_population = ['Population']"
+    "greenville_population = ['Population']\n",
+    "greenville_population"
    ]
   },
   {
