Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "greenville_population = ['Population']\n",
+    "greenville_population = greenville['Population']\n",
     "greenville_population"
    ]
   },
