--- a/index.ipynb
+++ b/index.ipynb
@@ -146,21 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-281465b16f77>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-281465b16f77>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    city_keys = list.(greenville.keys())\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Area', 'City', 'Country', 'Population']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_keys = list.(greenville.keys())\n",
-    "city_keys # ['Area', 'City', 'Country', 'Population']"
+    "city_keys = list(greenville.keys())\n",
+    "city_keys# ['Area', 'City', 'Country', 'Population']"
    ]
   },
   {
