--- a/index.ipynb
+++ b/index.ipynb
@@ -360,11 +360,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "287651"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "los_cabos_pop = cities[3]\n",
+    "los_cabos_pop = cities[3]['Population']\n",
     "los_cabos_pop # 287651"
    ]
   },
@@ -383,7 +394,7 @@
    },
    "outputs": [],
    "source": [
-    "city_count = None\n",
+    "city_count = cities\n",
     "city_count # 12"
    ]
   },
