--- a/index.ipynb
+++ b/index.ipynb
@@ -480,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = list(None\n",
+    "pyeongchang_keys = list(cities[11].keys\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
